# projeto_vc_3

./: cmatrix.py  decision_tree.py  mlp.py  pyproject.toml
tools/: data.py  extractors.py
