[tool.poetry]
name = "projeto_vc_3"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
scikit-image = "^0.19.3"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
